--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Father's Day!</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+    <div class="main">
+    <h1>Happy Father's Day!</h1>
+    <p>Thank you for being a great dad, Ahbba (aka Stephen)!<br>Hope you enjoy the stuff we got you, and this day.<br>We are thankful for the things you do.<br>Example of things we would be okay without: Swimming Practice.</p>
+    <img src="200620152021-001.jpg">
+    </div>
+</body>
+</html>
