--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Happy Father's Day!</title>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="shortcut icon" href="Screenshot (13).png" type="image/x-icon">
 </head>
 <body>
     <div class="main">
